# my_project

./: .gitignore  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  run.py
.openhands/: dspy.md  fastapi.md  repo.md  tests.md
app/: README.md  main.py
app/config/: settings.py
app/db/: __init__.py  init_db.py  redis_client.py
app/models/: chat.py
app/routers/: items.py
app/routers/chat/: __init__.py  endpoints.py
app/services/: c3.py  conversation.py  tutor.py
src/my_project/: __init__.py
tests/: __init__.py  test_app.py  test_chat_api.py  test_chat_api_fixed.py  test_chat_models.py  test_chat_services.py  test_tdd_chat.py  test_version.py
